# wiki-backend

./: Cargo.toml
migrations/: 20260124164931_create_user_table.sql  20260124165055_create_todo_table.sql  20260124223410_update_todo_is_done_column.sql  20260126121055_update_user_table_id.sql  20260126121234_update_todo_table_id.sql  20260129095822_add_tags_and_cetegory_support.sql  20260129101949_add_tags_and_cetegory_support_todo.sql  20260130083118_creating_progress_table_and_intregating_them.sql  20260203174143_progress_table_adding.sql  20260204152354_fixing_todo_table.sql  20260204152847_fixing_todo_table.sql  20260214144257_update_chatting.sql  20260215050032_updating_rooms_table.sql  20260215050619_update_table.sql  20260215052020_update_messages_table.sql  20260228010835_adding_fields.sql  20260228011200_adding_fields.sql  20260301012659_fix_id_problem_todo.sql  20260323080004_notifications.sql
src/: app.rs  handlers.rs  helper.rs  main.rs  router.rs  sql_query.rs  state.rs  utils.rs
src/common/: error.rs  response.rs
src/middleware/: auth.rs
src/modules/: mod.rs
src/modules/progress/: handler.rs  model.rs  repository.rs  routes.rs  service.rs
src/modules/rooms/: handler.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
src/modules/todo/: errors.rs  handler.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
src/modules/user/: errors.rs  handler.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
src/routes/: mod.rs
src/state/: mod.rs
src/utils/: config.rs  db.rs  jwt.rs  mod.rs  password.rs
