[package]
name = "protfolio_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version ="0.8.8", features = ["ws"]}
axum-extra = {version = "0.12.5", features = ["cookie"]}
axum-macros = "0.5.0"
chrono = "0.4.43"
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = {version ="10.2.0", features = ["rust_crypto"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
sqlx = {version = "0.8.6", features = ["postgres", "runtime-async-std", "uuid", "macros", "time"]}
thiserror = "2.0.18"
time = {version="0.3.46", features = ["serde"]}
tokio = {version="1.49.0", features = ["full"]}
tower-cookies = "0.11.0"
tower-http = {version = "0.6.8", features = ["cors"]}
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = {version = "1.19.0", features = ["v4", "serde"]}
